[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/nodoTask.gd" type="Script" id=1]

[node name="nodoTask" type="GraphNode"]
modulate = Color( 1, 0, 0, 1 )
margin_right = 200.0
margin_bottom = 80.0
mouse_filter = 1
show_close = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 220.0
margin_bottom = 44.0

[node name="edit" type="Button" parent="HBoxContainer"]
margin_right = 100.0
margin_bottom = 20.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
text = "..."
align = 0

[node name="delete" type="Button" parent="HBoxContainer"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 20.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
text = "x"
align = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 45.0
margin_right = 220.0
margin_bottom = 59.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 204.0
margin_bottom = 14.0
size_flags_horizontal = 7
size_flags_vertical = 7
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 204.0
margin_bottom = 14.0
size_flags_horizontal = 7
size_flags_vertical = 6
text = "Titulo del nodo"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_left = 16.0
margin_top = 60.0
margin_right = 310.0
margin_bottom = 130.0
dialog_text = "Se eliminaran los nodos hijos"

[connection signal="close_request" from="." to="." method="_on_nodoTask_close_request"]
[connection signal="pressed" from="HBoxContainer/edit" to="." method="_on_edit_pressed"]
[connection signal="pressed" from="HBoxContainer/delete" to="." method="_on_delete_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
